done setting up for the day

--- a/BonAppetitRestaurantManagerApp/BonAppetitRestaurantManagerApp/Shared/NavMenu.razor
+++ b/BonAppetitRestaurantManagerApp/BonAppetitRestaurantManagerApp/Shared/NavMenu.razor
@@ -8,7 +8,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item px-3 navbar-brand">
-                    <NavLink class="nav-link bg-transparent text-white" href="">Bon Appetit</NavLink>
+                    <NavLink class="nav-link bg-transparent" href="">Bon Appetit</NavLink>
                 </li>
             </ul>
         </div>
