Authentication Working on Manager App,
For now it is failing to Authenticate, therefore it cant authorize. but this is because of missing Duende IdentityServer Implementations...

that is the next step forward...

--- a/BonAppetitRestaurantManagerApp/BonAppetitRestaurantManagerApp/Shared/MainLayout.razor
+++ b/BonAppetitRestaurantManagerApp/BonAppetitRestaurantManagerApp/Shared/MainLayout.razor
@@ -3,7 +3,11 @@
 
 <NavMenu />
 <main>
-    <div class="page">
-        @Body
-    </div>
+    <AuthorizeView>
+        <Authorized>
+            <div class="page">
+                @Body
+            </div>
+        </Authorized>
+    </AuthorizeView>
 </main>
