--- a/BonAppetitRestaurantManagerApp/BonAppetitRestaurantManagerApp/_Imports.razor
+++ b/BonAppetitRestaurantManagerApp/BonAppetitRestaurantManagerApp/_Imports.razor
@@ -9,10 +9,15 @@
 @using Microsoft.JSInterop
 @using BonAppetitRestaurantManagerApp
 @using BonAppetitRestaurantManagerApp.Shared
-@*Out of the box*@
+
 
 @*Blazor Local Storage*@
 @using Blazored.LocalStorage
+
+
+@*Authentication*@
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 
 
 @*Models*@
