--- a/BonAppetitRestaurantManagerApp/BonAppetitRestaurantManagerApp/_Imports.razor
+++ b/BonAppetitRestaurantManagerApp/BonAppetitRestaurantManagerApp/_Imports.razor
@@ -16,6 +16,7 @@
 
 
 @*Authentication*@
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
 
