Modifications on BonAppetit App

--- a/BonAppetitRestaurantManagerApp/BonAppetitApp/Client/_Imports.razor
+++ b/BonAppetitRestaurantManagerApp/BonAppetitApp/Client/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using BonAppetitApp.Client
 @using BonAppetitApp.Client.Shared
+
+
+@using Microsoft.AspNetCore.Components.Authorization
