--- a/BonAppetitRestaurantManagerApp/BonAppetitApp/Client/Shared/NavMenu.razor
+++ b/BonAppetitRestaurantManagerApp/BonAppetitApp/Client/Shared/NavMenu.razor
@@ -20,6 +20,9 @@
                         <li class="nav-item px-3 navbar-brand">
                             <NavLink class="nav-link bg-transparent lobster">Log out</NavLink>
                         </li>
+                        <li class="nav-item px-3 navbar-brand">
+                            <NavLink class="nav-link bg-transparent lobster">@context.User.Identity?.Name!</NavLink>
+                        </li>
                     </Authorized>
                     <NotAuthorized>
                         <li class="nav-item px-3 navbar-brand">
