Payment Service full work. it functions well

--- a/BonAppetitWeb/BonAppetitApp/BonAppetitWebApp/Pages/ReservationComponents/ReservationConfirmed.razor
+++ b/BonAppetitWeb/BonAppetitApp/BonAppetitWebApp/Pages/ReservationComponents/ReservationConfirmed.razor
@@ -16,7 +16,7 @@
                     <li>Restaurant's Address: @Restaurant.RestaurantAddress</li>
                     <li>Restaurant's phone: @Restaurant.RestaurantPhone</li>
 
-                    <li>Reserved for: @Reservation.FirstName + @Reservation.LastName</li>
+                    <li>Reserved for: @Reservation.FirstName @Reservation.LastName</li>
                     <li>Time: @Reservation.StartTime.ToString()h</li>
                 </ul>
 
