--- a/BonAppetitManager/BonAppetitManager/BonAppetitManagerApp/Pages/DashboardComponents/MenuSelectionsComponents/TablesComponentsSelections.razor
+++ b/BonAppetitManager/BonAppetitManager/BonAppetitManagerApp/Pages/DashboardComponents/MenuSelectionsComponents/TablesComponentsSelections.razor
@@ -2,7 +2,7 @@
     <ul class="dashboardTopMenu-linklist">
         @foreach (var menuItem in TopMenuList)
         {
-            <li class="dashboardTopMenu-link lobster" >
+            <li class="dashboardTopMenu-link lobster" @onclick="()=> MenuSelectionTask(menuItem)">
                 @menuItem
             </li>
         }
