--- a/BonAppetitManager/BonAppetitManager/BonAppetitManagerApp/Pages/TablesComponents/EditTable.razor
+++ b/BonAppetitManager/BonAppetitManager/BonAppetitManagerApp/Pages/TablesComponents/EditTable.razor
@@ -21,7 +21,7 @@
         </div>
 
         <div class="col-12">
-            <label class="dashboard-label">Frequency of reservation(in Minutes)</label>
+            <label class="dashboard-label">Rsvp Freq.(in Minutes)</label>
         </div>
         <div class="col-12">
             <InputNumber @bind-Value="@Table.FrequencyOfReservation" class="dashboard-table-input" />
