--- a/BonAppetitWeb/BonAppetitApp/BonAppetitWebApp/Shared/NavMenu.razor
+++ b/BonAppetitWeb/BonAppetitApp/BonAppetitWebApp/Shared/NavMenu.razor
@@ -27,6 +27,9 @@
                         <li class="nav-item px-3 navbar-brand">
                             <NavLink class="nav-link bg-transparent lobster" href="/authentication/login">Log In</NavLink>
                         </li>
+                        <li class="nav-item px-3 navbar-brand">
+                            <NavLink class="nav-link bg-transparent lobster" href="/UserRegistration">Register</NavLink>
+                        </li>
                     </NotAuthorized>
                 </AuthorizeView>
             </ul>
